# REST-API-update-1

./: .gitignore  main.py  pyproject.toml
conf/: config.py
migrations/: env.py
migrations/versions/: 0cb882648211_init.py  4e89034b5a7b_add_roles_of_user.py
src/: schemas.py
src/database/: connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  roles.py
